# minesPlusPlus

./: .gitignore  CMakeLists.txt  README.md
src/: a.out  main.cpp
src/core/: game.cpp  game.hpp
src/gfx/: window.cpp  window.hpp
src/ui/: cli.cpp  cli.hpp  window.hpp
